src/test/ui/iterators/string.stderr
error[E0277]: `std::string::String` is not an iterator
  --> $DIR/string.rs:2:14
   |
LL |     for _ in "".to_owned() {}
   |              ^^^^^^^^^^^^^ `std::string::String` is not an iterator; try calling `.chars()` or `.bytes()`
   |
   = help: the trait `std::iter::Iterator` is not implemented for `std::string::String`
   = note: required by `std::iter::IntoIterator::into_iter`

error[E0277]: `&str` is not an iterator
  --> $DIR/string.rs:4:14
   |
LL |     for _ in "" {}
   |              ^^ `&str` is not an iterator; try calling `.chars()` or `.bytes()`
   |
   = help: the trait `std::iter::Iterator` is not implemented for `&str`
   = note: required by `std::iter::IntoIterator::into_iter`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
